float: right bug fix

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -9,21 +9,25 @@
         <div class="col-12 m-0">
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
-                <h3>Pursue a career as a Software Engineer (SWE)</h3>
-                <p>
-                    1. Obtain a certification from your local community college in one of the following areas:
-                    Front End Web Development (FEW)
-                    Back End Web Development (BEW)...
-                </p>
-                
-                <p> 
-                    2. Dedicate time to prepare for technical interviews by utilizing resources such as Structy, Algo Expert, and mastering problem-solving techniques as presented in "Cracking the Coding Interview..."
-                </p>   
-                <p>
-                    3. Seek assistance in job placement through programs like...
-                </p>
-                <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Comprehensive Step-by-Step Guide</a>
+                <div style="padding-bottom: 45px;"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
+
+                    <h3>Pursue a career as a Software Engineer (SWE)</h3>
+                    <p>
+                        1. Obtain a certification from your local community college in one of the following areas:
+                        Front End Web Development (FEW)
+                        Back End Web Development (BEW)...
+                    </p>
+                    
+                    <p> 
+                        2. Dedicate time to prepare for technical interviews by utilizing resources such as Structy, Algo Expert, and mastering problem-solving techniques as presented in "Cracking the Coding Interview..."
+                    </p>   
+                    <p>
+                        3. Seek assistance in job placement through programs like...
+                    </p>
+                    <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
+                    <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Comprehensive Step-by-Step Guide</a>
+
+                </div>
 
             </div>
         </div>
@@ -34,18 +38,22 @@
         <div class="col-12 m-0"> 
             <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
-                <h3>Solutions to Coding Challenges</h3>
-                <p>
-                    Are you facing challenges when attempting to solve a coding problem?
-                </p>
-                
-                <p> 
-                    Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
-                </p>   
-                <p>
-                    Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
-                </p>
-                <a href="/search_solutions" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+                <div style="padding-bottom: 45px;"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
+
+                    <h3>Solutions to Coding Challenges</h3>
+                    <p>
+                        Are you facing challenges when attempting to solve a coding problem?
+                    </p>
+                    
+                    <p> 
+                        Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
+                    </p>   
+                    <p>
+                        Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
+                    </p>
+                    <a href="/search_solutions" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+
+                </div>
 
             </div>
         </div>
