background gradient 😆 😎 Awsome 👏

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,12 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821" crossorigin="anonymous"></script>
 
     </head>
-        <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)">
+        <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)"> -->
+        <!-- <body style="background: linear-gradient(-75deg, rgba(0, 194, 255, 0.95) 25.76%, rgba(130, 220, 248, 0.95) 52.76%, rgba(242, 242, 242, 0.95) 76.04%)"> -->
+
+        <!-- <body style="background: linear-gradient(185deg, #00C2FF 0%, rgba(255, 255, 255) 50%, #00C2FF 100%)"> -->
+
+        <body style="background: linear-gradient(-65deg, rgba(0, 194, 255, 0.95) 65%, rgba(130, 220, 248, 0.95) 75%, rgba(242, 242, 242, 0.95) 99.99%)">
 
             <!-- Navigation -->
             <nav class="container-fluid text-center bg-white p-0 m-0">
@@ -138,7 +143,7 @@
 
         <!-- Footer -->
         <hr class="mx-5 my-0 p-0" style="background: white; color: white; height: 1px;">
-        <footer class="text-center text-lg-start text-muted" style="background: linear-gradient(200deg, rgba(0, 194, 255, 0.95) 25.76%, rgba(130, 220, 248, 0.95) 52.73%, rgba(242, 242, 242, 0.95) 76.04%)">
+        <footer class="text-center text-lg-start text-muted" style="background: linear-gradient(185deg, rgba(0, 194, 255, 0.95) 20.76%, rgba(130, 220, 248, 0.95) 52.73%, rgba(242, 242, 242, 0.95) 75%)">
             <hr class="mx-5 my-0 p-0" style="background: white; color: white; height: 1px;">
             <!-- Section: Social media -->
             <section class="d-flex justify-content-center justify-content-lg-between p-4">
