--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -7,6 +7,8 @@
     <!-- Main content -->
     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xl-5 row-cols-xxl-6 m-0"> <!-- *SEARCH RES* -->
 
+        <!-- <p>{{searched}}</p> -->
+
         {% for solution in solutions %}
         <div class="col">
             <a class="card h-100 btn btn-outline-dark" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);" href="/code_solution/{{ solution._id }}">
