--- a/templates/base.html
+++ b/templates/base.html
@@ -41,10 +41,14 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821" crossorigin="anonymous"></script>
 
     </head>
-        <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%)"> -->
-        <!-- <body style="background: linear-gradient(-75deg, rgba(0, 194, 255, 0.95) 25.76%, rgba(130, 220, 248, 0.95) 52.76%, rgba(242, 242, 242, 0.95) 76.04%)"> -->
 
-        <!-- <body style="background: linear-gradient(185deg, #00C2FF 0%, rgba(255, 255, 255) 50%, #00C2FF 100%)"> -->
+        <!-- 
+
+            TODO: 👇👇👇
+
+                - adjust linear-gradient to be more subtle for small screen based on screen size (NOTE: don't use mobile browser detection)
+
+         -->
 
         <body style="background: linear-gradient(-65deg, rgba(0, 194, 255, 0.95) 65%, rgba(130, 220, 248, 0.95) 75%, rgba(242, 242, 242, 0.95) 99.99%)">
 
@@ -64,14 +68,34 @@
                     </a>
 
                     <!-- Search -->
-                    <form class="mx-auto col-8 col-md-6 col-lg-4 p-2 m-0" role="search">
-                        <!-- <input 
+                    <form class="mx-auto col-8 col-md-6 col-lg-4 p-2 m-0" role="search" method="POST" action="{{url_for('search')}}">
+                        {{ form.hidden_tag() }}
+                        <input 
                             class="form-control me-2" 
                             type="search" 
                             placeholder="Search" 
                             aria-label="Search"
                             id="search"
-                        > -->
+                            name="searched"
+                        >
+
+                        <!-- 
+                            Adds value to search Field "from URL" if value Exist, ONLY on search_solutions
+                        -->
+                        <script>
+                            if(window.location.href.includes('/search_solutions/')){
+
+                                searched = window.location.href.split('/search_solutions/')[1];
+
+                                if(searched !== "None"){
+                                    // Remove/Replace/Decode "%<20|3E|3C|...>"" from searched
+                                    searched = decodeURIComponent(searched)
+
+                                    document.getElementById("search").value = searched;
+                                } 
+                            }
+                        </script>
+
                     </form>
                     
                     <!-- Web nav -->
@@ -81,7 +105,7 @@
                             <div class="col-6 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
-                                    href="/search_solutions"
+                                    href="/search_solutions/None"
                                 >Coding Solutions</a>
                             </div>
 
@@ -103,7 +127,7 @@
                             - Set `data-bs-offset="35,8" in <button> if not Safari
                             - add back <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                             - Test the above fix on Mobile Safari via iPhone
-
+                            - Add slightly transparent black overlay when drop-down menu is clicked allowing only the NAV to be visible
                     -->
 
                     <!-- Small Window; Web/Mobile nav -->  
@@ -118,7 +142,7 @@
                     <ul class="dropdown-menu dropdown-menu-end p-0 m-0 text-center" style="border-radius: 0px 0px 0px 15px; border: none; float: right; width: 150px;">
                         <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
                         <li class="m-0">
-                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions">Coding Solutions</a>
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None">Coding Solutions</a>
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                         <li class="m-0">
