search link 🔗 bug 🐞 fix

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -51,7 +51,7 @@
                     <p>
                         Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
                     </p>
-                    <a href="/search_solutions" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+                    <a href="/search_solutions/None" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
 
                 </div>
 
