search link 🔗 bug 🐞 fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,7 @@
                         <a href="/">Home page</a>
                     </p>
                     <p>
-                        <a href="/search_solutions">Coding Solutions</a>
+                        <a href="/search_solutions/None">Coding Solutions</a>
                     </p>
                     <p>
                         <a href="/swe_career_guide">SWE Career Guide</a>
