--- a/templates/base.html
+++ b/templates/base.html
@@ -86,12 +86,29 @@
                         >
 
                         <!-- 
-                            Adds value to search Field "from URL" if value Exist, ONLY on search_solutions
+                            Adds search query to search/input Field "from URL" if value Exist, ONLY on search_solutions & remove page number
                         -->
                         <script>
                             if(window.location.href.includes('/search_solutions/')){
 
-                                searched = window.location.href.split('/search_solutions/')[1];
+                                searchQueryPgNumURL = window.location.href.split('/search_solutions/')[1];
+
+                                function findIndexes(string, char) { // finds all indexes of a character in a string e.g [1, 3, 5, ...]
+                                    return string
+                                        .split('')
+                                        .map((c, idx) => {
+                                            if (c === char) {
+                                                return idx;
+                                            }
+
+                                            return -1;
+                                        })
+                                        .filter(element => element !== -1);
+                                }
+
+                                const indexes = findIndexes(searchQueryPgNumURL, '/'); // find all indexes of '/' in the URL
+                                // removes the page number in the URL and leaves only the search query
+                                searched = searchQueryPgNumURL.slice(0, indexes[indexes.length - 1]); 
 
                                 if(searched !== "None"){
                                     // Remove/Replace/Decode "%<20|3E|3C|...>"" from searched
@@ -111,7 +128,7 @@
                             <div class="col-6 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
-                                    href="/search_solutions/None"
+                                    href="/search_solutions/None/0"
                                 >Coding Solutions</a>
                             </div>
 
@@ -148,7 +165,7 @@
                     <ul class="dropdown-menu dropdown-menu-end p-0 m-0 text-center" style="border-radius: 0px 0px 0px 15px; border: none; float: right; width: 150px;">
                         <!-- <li><hr class="p-0 m-0" style="color: #CDCCCC;"></li> -->
                         <li class="m-0">
-                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None">Coding Solutions</a>
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/search_solutions/None/0">Coding Solutions</a>
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                         <li class="m-0">
@@ -196,7 +213,7 @@
                         <a href="/">Home page</a>
                     </p>
                     <p>
-                        <a href="/search_solutions/None">Coding Solutions</a>
+                        <a href="/search_solutions/None/0">Coding Solutions</a>
                     </p>
                     <p>
                         <a href="/swe_career_guide">SWE Career Guide</a>
@@ -246,9 +263,9 @@
                     
                     iframe[0].style.width = Number(iframe[0].style.width.replace(/[^0-9]+/, '')) + 2 + "px";
 
-                    console.log(iframe[0].style.height)
+                    // console.log(iframe[0].style.height)
                     iframe[0].style.height = Number(iframe[0].style.height.replace(/[^0-9]+/, '')) + 2 + "px";
-                    console.log(iframe[0].style.height)
+                    // console.log(iframe[0].style.height)
                     // iframe[0].style.height = iframe[0].style.height *.25;
                     
                     // console.log(iframe[0].style.cssText);
