--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -108,7 +108,7 @@
     {% if search_res %}
         <div class="row py-0 py-md-2 m-0">
             <div class="col-12 p-0 m-0">
-                <div class="p-0 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <div class="p-0 pb-4 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                     <div class="row py-2 m-0 text-center">
                         <h3 class="col-12 m-0">Search Results</h3>
@@ -117,7 +117,7 @@
                     <!-- YouTube Video(s) -->
                     <!-- Carousel  -->
                     {% if search_res.video.has_video %} 
-                        <div class="row py-2 text-center">
+                        <div class="row py-2 text-center m-0">
 
                             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
 
@@ -127,12 +127,12 @@
                                         {% if loop.index-1 == 0 %}
                                             <div class="carousel-item active" data-bs-interval="10000">
                                             
-                                                <iframe width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                                <iframe class="code-solution-youtube-video" width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                             </div>
                                         {% else %}
                                             <div class="carousel-item" data-bs-interval="10000">
 
-                                                <iframe width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                                <iframe class="code-solution-youtube-video" width="450" height="253" src="{{src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                             </div>
                                         {% endif %}
                                     {% endfor %}
