--- a/templates/ads.html
+++ b/templates/ads.html
@@ -12,38 +12,40 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
-                                <div class="pt-1 px-1" >
+                            <!-- lg Web Ad -->
+                            <!-- <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> 
+                                <div class="pt-1 px-1" > -->
                                     <!-- vvv code from Ad site vvv --> 
-                                    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                                    <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                     <noscript>
                                         <a href="https://yllix.com/publishers/848887" target="_blank">
                                             <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                         </a>
-                                    </noscript>
+                                    </noscript> -->
                                     <!-- ^^^ code from Ad site ^^^ -->
-                                </div>
-                            </div>
-                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
+                                <!-- </div>
+                            </div> -->
+                            <!-- sm MOB Ad -->
+                            <!-- <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads">  -->
                                 <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
+                                <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
-                                </noscript>
+                                </noscript> -->
                                 <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
-                            <div class="mob-ad m-0 ads">
+                            <!-- </div>
+                            <div class="mob-ad m-0 ads"> -->
                                 <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
-                                </noscript>
+                                </noscript> -->
                                 <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
+                            <!-- </div> -->
 
                         </div>
                     </div>
@@ -56,36 +58,38 @@
                     <div class="col-12 m-0">
                         <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads"> <!-- lg Web Ad -->
+                            <!-- lg Web Ad -->
+                            <!-- <div class="d-none d-xl-block col-md-auto web-ad m-0 pt-5 ads">  -->
                                 <!-- vvv code from Ad site vvv --> 
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                                <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
-                                </noscript>
+                                </noscript> -->
                                 <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
-                            <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads"> <!-- sm MOB Ad -->
+                            <!-- </div> -->
+                            <!-- sm MOB Ad -->
+                            <!-- <div class="d-block d-xl-none col-auto web-ad m-0 pt-5 ads">  -->
                                 <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
+                                <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
-                                </noscript>
+                                </noscript> -->
                                 <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
-                            <div class="mob-ad m-0 ads">
+                            <!-- </div>
+                            <div class="mob-ad m-0 ads"> -->
                                 <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
-                                </noscript>
+                                </noscript> -->
                                 <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
+                            <!-- </div> -->
 
                         </div>
                     </div>
@@ -103,16 +107,16 @@
 
                  -->
 
-                <div class="sticky-top web-ad ads" style="padding-top: 130px;">
+                <!-- <div class="sticky-top web-ad ads" style="padding-top: 130px;"> -->
                     <!-- vvv code from Ad site vvv -->
-                    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralSide&pub=848887&format=160x600&ga=g"></script>
+                    <!-- <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralSide&pub=848887&format=160x600&ga=g"></script>
                     <noscript>
                         <a href="https://yllix.com/publishers/848887" target="_blank">
                             <img src="//ylx-aff.advertica-cdn.com/pub/160x600.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                         </a>
-                    </noscript>
+                    </noscript> -->
                     <!-- ^^^ code from Ad site ^^^ -->
-                </div>
+                <!-- </div> -->
             </div> 
 
             <!-- <scritp>
