--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -9,13 +9,53 @@
 <main>
 
     <!-- 1st Content box / My Personal Solution(s) & Video(s) -->
-    <div class="row py-0 py-md-2 m-0">
-        <div class="col-12 p-0 m-0">
-            <div class="p-0 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+    <div class="row pt-0 pb-5 py-md-2 m-0">
+        <div class="col-12 p-0 m-0 pb-5">
+            <div class="p-0 p-md-5 m-0 pb-4" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                 <div class="row py-2 m-0 text-center">
-                    <h3 class="col-12 m-0">{{name}}</h3>
+                    <h1 class="col-12 m-0">{{name}}</h1>
                 </div>
+
+                {% if how_to %}
+                    <div class="row py-2 m-0 px-0">
+                        {% for data in how_to %}
+
+                            {% if data.tag == "p" %}
+                                <p class="col-12 m-0 py-3">{{data.content}}</p>
+                            {% elif data.tag == "h2" %}
+                                <h2 class="col-12 m-0 py-3">{{data.content}}</h2>
+                            {% elif data.tag == "h5" %}
+                            <h5 class="col-12 m-0 py-1">{{data.content}}</h5>
+                            {% elif data.tag == "span" %}
+                            <span class="col-12 m-0 py-1">{{data.content}}</span>
+                            <br>
+
+                            {% elif data.tag == "ul" %}
+                            <ul class="col-12 m-0 py-1 p-5">
+                                {% for li in data.content %}
+
+                                    <li>{{ li }}</li>
+
+                                {% endfor %}
+                            </ul>
+
+                            {% elif data.tag == "ol" %}
+                            <ol class="col-12 m-0 py-1 p-5">
+                                {% for li in data.content %}
+
+                                    <li>{{ li }}</li>
+
+                                {% endfor %}
+                            </ol>
+
+                            {% elif data.tag == "code" %}
+                                <pre class="line-numbers py-3">
+                                    <code class="language-markup">{{data.content}}</code>
+                                </pre>
+                            {% endif %}
+                        {% endfor %}
+                {% endif %}
 
                 <!-- YouTube Video(s) -->
                 <!-- Carousel  -->
@@ -61,7 +101,7 @@
                 {% endif %} 
 
                 <!-- Solutions in language tabs -->
-                <div class="row ppy-2 m-0">
+                <div class="row py-2 m-0 px-0">
 
                     <!-- Choose language -->
                     <!-- Folder like tabs -->
@@ -80,7 +120,7 @@
                     </nav>
 
                     <!-- My Code Solution -->
-                    <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-content p-0" id="nav-tabContent">
                         
                         {% for language in languages %}
                             {% if loop.index-1 == 0 %}
@@ -106,7 +146,7 @@
 
     <!-- 2nd Content box / Seach Res -->
     {% if search_res %}
-        <div class="row py-0 py-md-2 m-0">
+        <div class="row p-0 py-md-2 m-0">
             <div class="col-12 p-0 m-0">
                 <div class="p-0 pb-4 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
